--- a/styleHome.css
+++ b/styleHome.css
@@ -13,6 +13,13 @@ body {
     object-fit: contain;
   }
 
+  .card-pro{
+    transition: all 0.2s;
+  }
+  .card-pro:hover{
+    transform: scale(0.9);
+  }
+
    .collection-item:hover .rounded-circle {
     transform: scale(1.1);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
